...
                        android:layout_weight="45"
                        android:orientation="vertical"
                        android:weightSum="100">


                        <EditText
                            android:id="@+id/edittext_username"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_heightn"
                            android:layout_marginTop="@dimen/edittext_email_margintop"
                            android:autofillHints="@string/email"
                            android:background="@drawable/edittext_border_white"
                            android:cursorVisible="true"
                            android:ems="10"
                            android:fontFamily="@font/avenir_next_lt_pro_regular"
                            android:hint="@string/email"
                            android:imeOptions="flagNoExtractUi"
...
                            android:layout_marginTop="@dimen/edittext_password_margintop"
                            app:passwordToggleEnabled="true"
                            app:hintEnabled="false"
                            app:hintAnimationEnabled="false">

                            <EditText
                                android:id="@+id/edittext_password"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/edittext_heightn"
                                android:background="@drawable/edittext_border_white"
                                android:cursorVisible="true"
                                android:fontFamily="@font/avenir_next_lt_pro_regular"
                                android:hint="@string/Password"
...
                                android:textSize="@dimen/size_16px"
                                app:error="@{viewModel.isPasswordValidated ?null : `Invalid Password`}"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/text_forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/textview_forgot_password_margintop"
                            android:layout_marginBottom="@dimen/textview_forgot_password_marginbottom"
                            android:autoLink="all"
                            android:fontFamily="@font/avenir_next_lt_pro_demi"
                            android:gravity="center_horizontal"
                            android:linksClickable="true"
                            android:onClick="@{()-> viewModel.forgotPasswordRedirection()}"
                            android:selectAllOnFocus="false"
                            android:text="@string/forgot_password"
                            android:textColor="@color/safety_pin_yellow"
                            android:textSize="@dimen/text_size_forgot_psw" />

                        <Button
                            android:id="@+id/button_login"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:background="@drawable/ic_button_border"
                            android:fontFamily="@font/avenir_next_lt_pro_demi"
                            android:onClick="@{() -> viewModel.validateCredentials()}"
                            android:paddingTop="5dp"
...
                                android:selectAllOnFocus="false"
                                android:text="@string/dont_have_account"
                                android:textColor="@color/needle_grey"
                                android:textSize="@dimen/text_size_forgot_psw" />

                            <TextView
                                android:id="@+id/tv_signup"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="end"
                                android:layout_marginStart="5dp"
                                android:autoLink="web"
                                android:fontFamily="@font/avenir_next_lt_pro_demi"
                                android:gravity="center_horizontal"
                                android:linksClickable="true"
                                android:onClick="@{()-> viewModel.signUpRedirection()}"
                                android:selectAllOnFocus="false"
                                android:text="@string/sign_up"
                                android:textColor="@color/needle_grey"
                                android:textSize="@dimen/text_size_forgot_psw" />


                        </LinearLayout>

...
                            android:text="@string/you_will_be_redirected_to_ditto"
                            android:textColor="@color/texthint"
                            android:textSize="@dimen/text_size_you_will" />


                        <TextView
                            android:id="@+id/text_guest_preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="@dimen/textview_see_more_margin_top"
                            android:layout_marginBottom="@dimen/textview_see_more_margin_bottom"
                            android:autoLink="all"
                            android:fontFamily="@font/avenir_next_lt_pro_demi"
                            android:gravity="center_horizontal"
                            android:onClick="@{()-> viewModel.guestLogin()}"
                            android:selectAllOnFocus="false"
                            android:text="@string/guest_preview"
                            android:textColor="@color/needle_grey"
                            android:textSize="@dimen/text_size_forgot_psw" />


                    </LinearLayout>

...
