<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ditto.home.ui.HomeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screen_bg_color">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".03" />

            <ImageView
                android:id="@+id/ditto_verticle_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ditto_primary_vertical_logo"
                app:layout_constraintStart_toStartOf="@+id/guide_left"
                app:layout_constraintTop_toBottomOf="@+id/guideline_top"
                app:layout_constraintBottom_toTopOf="@id/margin_spacer" />

            <TextView
                android:id="@+id/text_view_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_x"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:text="@string/welcome_back"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/text_header"
                android:visibility="@{viewModel.isGuest() ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/ditto_verticle_logo"
                app:layout_constraintTop_toBottomOf="@+id/guideline_top"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_it_pro_bold"
                android:text="@{viewModel.header}"
                android:textColor="@color/needle_grey"
                android:textSize="@dimen/text_header"
                app:layout_goneMarginStart="@dimen/padding_x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/text_view_header"
                app:layout_constraintTop_toBottomOf="@+id/guideline_top" />


            <TextView
                android:id="@+id/textView_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_lt_pro_medium"
                android:text="@string/welcome_message"
                android:textColor="@color/black"
                android:textSize="@dimen/text_desc"
                android:layout_marginTop="@dimen/padding_header_desc"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/guide_left"
                app:layout_constraintTop_toBottomOf="@+id/text_view_name"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView_Description" />

            <android.widget.Space
                android:id="@+id/margin_spacer"
                android:layout_width="@dimen/list_left_margin"
                android:layout_height="@dimen/dimen_0"
                app:layout_constraintEnd_toStartOf="@+id/guide_left"
                app:layout_constraintTop_toBottomOf="@+id/textView_Description"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="@dimen/dimen_0"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:data="@{viewModel.homeItem}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".65"
                app:layout_constraintStart_toStartOf="@+id/margin_spacer"
                app:layout_constraintTop_toBottomOf="@+id/barrier_vertical"
                tools:listitem="@layout/home_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>