<resources>
    <string name="app_name">login-ui</string>
    <string name="login_imgDesc">Explore a hassle free way of cutting and sewing..</string>
    <string name="logintext">Explore a hassle free way of cutting and sewing..</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="you_will_be_redirected_to_ditto">You will be redirected to dittopatterns.com</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="guest_preview"><u>Guest preview</u></string>
    <string name="ditto_site"> www.dittopatterns.com.reg.2021</string>
    <string name="login_app_title">Hello, Ditto!</string>
    <string name="login_app_description">Welcome to a revolutionary way to get right to your project without ever having to cut or pin thin pattern pieces again! Simply set up the Ditto system and project patterns right onto your fabric, then cut. So easy!</string>

</resources>
